<?xml version="1.0" encoding="utf-8"?>
<TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="@dimen/layout_padding"
    android:weightSum="5">

    <TableRow
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="horizontal"
        android:weightSum="4">

        <Button
            android:id="@+id/clearButton"
            style="@style/ControlButtonStyle"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/clear" />

        <Button
            android:id="@+id/bracketButton"
            style="@style/OperationButtonStyle"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/parenthesis" />

        <Button
            android:id="@+id/percentButton"
            style="@style/OperationButtonStyle"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/percent" />

        <Button
            android:id="@+id/divButton"
            style="@style/OperationButtonStyle"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/division" />
    </TableRow>

    <TableRow
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="horizontal"
        android:weightSum="4">

        <Button
            android:id="@+id/sevenButton"
            style="@style/ButtonStyle"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/seven" />

        <Button
            android:id="@+id/eightButton"
            style="@style/ButtonStyle"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/eight" />

        <Button
            android:id="@+id/nineButton"
            style="@style/ButtonStyle"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/nine" />

        <Button
            android:id="@+id/mulButton"
            style="@style/OperationButtonStyle"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/multiplication" />
    </TableRow>

    <TableRow
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="horizontal"
        android:weightSum="4">

        <Button
            android:id="@+id/fourButton"
            style="@style/ButtonStyle"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/four" />

        <Button
            android:id="@+id/fiveButton"
            style="@style/ButtonStyle"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/five" />

        <Button
            android:id="@+id/sixButton"
            style="@style/ButtonStyle"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/six" />

        <Button
            android:id="@+id/subButton"
            style="@style/OperationButtonStyle"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/subtraction" />
    </TableRow>

    <TableRow
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="horizontal"
        android:weightSum="4">

        <Button
            android:id="@+id/oneButton"
            style="@style/ButtonStyle"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/one" />

        <Button
            android:id="@+id/twoButton"
            style="@style/ButtonStyle"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/two" />

        <Button
            android:id="@+id/threeButton"
            style="@style/ButtonStyle"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/three" />

        <Button
            android:id="@+id/addButton"
            style="@style/OperationButtonStyle"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/addition" />
    </TableRow>

    <TableRow
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="horizontal"
        android:weightSum="4">

        <Button
            android:id="@+id/zeroButton"
            style="@style/ButtonStyle"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/zero" />

        <Button
            android:id="@+id/dotButton"
            style="@style/ButtonStyle"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/dot" />

        <Button
            android:id="@+id/backButton"
            style="@style/ButtonStyle"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:contentDescription="@string/backButtonDescription"
            app:icon="@drawable/ic_baseline_backspace_24" />

        <Button
            android:id="@+id/equalButton"
            style="@style/OperationButtonStyle"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/equal" />
    </TableRow>
</TableLayout>
