<?xml version="1.0" encoding="utf-8"?>
<TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:weightSum="5">

    <TableRow
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="horizontal"
        android:weightSum="5">

        <!-- Inverse function: ASIN -->
        <Button
            android:id="@+id/sinButton"
            style="@style/ButtonStyle"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            tools:text="@string/sin" />

        <!-- Inverse function: ACOS -->
        <Button
            android:id="@+id/cosButton"
            style="@style/ButtonStyle"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            tools:text="@string/cos" />

        <!-- Inverse function: ATAN -->
        <Button
            android:id="@+id/tanButton"
            style="@style/ButtonStyle"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            tools:text="@string/tan" />

        <!-- Inverse function: ACOT -->
        <Button
            android:id="@+id/cotButton"
            style="@style/ButtonStyle"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            tools:text="@string/cot" />

        <!-- Inverse function: EXP -->
        <Button
            android:id="@+id/lnButton"
            style="@style/ButtonStyle"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            tools:text="@string/ln" />
    </TableRow>

    <TableRow
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="horizontal"
        android:weightSum="5">

        <!-- Inverse function: ASINH -->
        <Button
            android:id="@+id/sinhButton"
            style="@style/ButtonStyle"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            tools:text="@string/sinh" />

        <!-- Inverse function: ACOSH -->
        <Button
            android:id="@+id/coshButton"
            style="@style/ButtonStyle"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            tools:text="@string/cosh" />

        <!-- Inverse function: ATANH -->
        <Button
            android:id="@+id/tanhButton"
            style="@style/ButtonStyle"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            tools:text="@string/tanh" />

        <!-- Inverse function: ACOTH -->
        <Button
            android:id="@+id/cothButton"
            style="@style/ButtonStyle"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            tools:text="@string/coth" />

        <!-- Inverse function: 2^x -->
        <Button
            android:id="@+id/log2Button"
            style="@style/ButtonStyle"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            tools:text="@string/log2" />
    </TableRow>

    <TableRow
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="horizontal"
        android:weightSum="5">

        <!-- Inverse function: 10^x -->
        <Button
            android:id="@+id/log10Button"
            style="@style/ButtonStyle"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            tools:text="@string/log10" />

        <Button
            android:id="@+id/cbrtButton"
            style="@style/ButtonStyle"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/cbrt" />

        <Button
            android:id="@+id/rootButton"
            style="@style/ButtonStyle"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/root" />

        <Button
            android:id="@+id/ceilButton"
            style="@style/ButtonStyle"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/ceil" />

        <Button
            android:id="@+id/absButton"
            style="@style/ButtonStyle"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/abs" />
    </TableRow>

    <TableRow
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="horizontal"
        android:weightSum="3">

        <Button
            android:id="@+id/hypotButton"
            style="@style/ButtonStyle"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/hypot" />

        <Button
            android:id="@+id/floorButton"
            style="@style/ButtonStyle"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/floor" />

        <Button
            android:id="@+id/roundButton"
            style="@style/ButtonStyle"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/round" />
    </TableRow>

    <TableRow
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="horizontal"
        android:weightSum="3">

        <Button
            android:id="@+id/fractionButton"
            style="@style/ButtonStyle"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/fraction" />

        <Button
            android:id="@+id/piButton"
            style="@style/ButtonStyle"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/pi" />

        <Button
            android:id="@+id/eButton"
            style="@style/ButtonStyle"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/e" />
    </TableRow>
</TableLayout>